test/contracts/fail/check-prefix.sol
import "forge-std/Test.sol";

contract SolidityTest is Test {

    function setUp() public {
    }

    function check_trivial() public {
        assertTrue(false);
    }
}
